# giturlparse

./: .bumpversion.cfg  .checkignore  .codeclimate.yaml  .coveragerc  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
changes/: 00.feature  10213.feature  107.bugfix  119.bugfix  121.feature  150.bugfix  18.feature  21.feature  29.bugfix  33.bugifx  42.bugfix  43.bugfix  46.bugfix  47.feature  48.feature  66.bugfix  71.bugfix
giturlparse/: __init__.py  parser.py  result.py
giturlparse/tests/: __init__.py  parse.py  rewrite.py  test_parse.py  test_rewrite.py
