[flake8]
exclude = *.egg-info,.git,.settings,.tox,build,dist
max-line-length = 99

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 99
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = giturlparse
multi_line_output = 5
not_skip = __init__.py