[metadata]
name = giturlparse
version = attr: giturlparse.__version__
url = https://github.com/nephila/giturlparse
author = Aaron O Mullan
author_email = aaron@friendco.de
maintainer = Iacopo Spalletti
maintainer_email = i.spalletti@nephila.it
description = A Git URL parsing module (supports parsing and rewriting)
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = Apache v2
license_file = LICENSE
keywords = giturlparse
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
setup_requires =
	setuptools
packages = giturlparse, giturlparse.platforms
python_requires = >=3.8
zip_safe = False
test_suite = giturlparse.tests

[options.package_data]
* = *.txt, *.rst
giturlparse = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[bdist_wheel]
universal = 1
